--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,15 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Data directories and files
+resources/data/*
+!resources/data/README.md
+
+# Models directories
+resources/models/*
+!resources/models/README.md
+
+# Experiments directories
+experiments/*
+!experiments/README.md
