--- a/.gitignore
+++ b/.gitignore
@@ -131,11 +131,7 @@ dmypy.json
 # Data directories and files
 resources/data/*
 !resources/data/README.md
-rnnoise-master/*
-
-# Models directories
-resources/models/*
-!resources/models/README.md
+!resources/data/**/metadata.csv
 
 # Experiments directories
 experiments/*
