--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,10 @@ resources/data/*
 !resources/data/README.md
 !resources/data/**/metadata.csv
 
+# Models directories and files
+resources/models/*
+!resources/models/README.md
+
 # Experiments directories
 experiments/*
 !experiments/README.md
