--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy==1.23.5
 scipy==1.9.3
 pandas==1.5.2
 matplotlib==3.6.2
+seaborn==0.12.1
 scikit-learn==1.1.3
 librosa==0.9.2
 praat-parselmouth==0.4.2
